Modified the cache entity
